// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page main nav section against snapshot 1`] = `
<PageSection
  className=""
  noPadding={false}
  noPaddingMobile={false}
  type="nav"
  variant="default"
>
  <section
    className="pf-c-page__main-nav"
  />
</PageSection>
`;

exports[`Check page section with fill and no padding example against snapshot 1`] = `
<Component
  isFilled={true}
  noPadding={true}
<<<<<<< HEAD:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.tsx.snap
=======
  noPaddingMobile={false}
  type="default"
  variant="default"
>>>>>>> feat(Page): add page section main nav type variant:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.js.snap
>
  <section
    className="pf-c-page__main-section pf-m-no-padding pf-m-fill"
  />
</Component>
`;

exports[`Check page section with fill example against snapshot 1`] = `
<Component
  isFilled={true}
<<<<<<< HEAD:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.tsx.snap
=======
  noPadding={false}
  noPaddingMobile={false}
  type="default"
  variant="default"
>>>>>>> feat(Page): add page section main nav type variant:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.js.snap
>
  <section
    className="pf-c-page__main-section pf-m-fill"
  />
</Component>
`;

exports[`Check page section with no fill example against snapshot 1`] = `
<Component
  isFilled={false}
<<<<<<< HEAD:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.tsx.snap
=======
  noPadding={false}
  noPaddingMobile={false}
  type="default"
  variant="default"
>>>>>>> feat(Page): add page section main nav type variant:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.js.snap
>
  <section
    className="pf-c-page__main-section pf-m-no-fill"
  />
</Component>
`;

exports[`Check page section with no padding example against snapshot 1`] = `
<Component
  noPadding={true}
<<<<<<< HEAD:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.tsx.snap
=======
  noPaddingMobile={false}
  type="default"
  variant="default"
>>>>>>> feat(Page): add page section main nav type variant:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.js.snap
>
  <section
    className="pf-c-page__main-section pf-m-no-padding"
  />
</Component>
`;

exports[`Check page section with no padding on mobile example against snapshot 1`] = `
<Component
  noPaddingMobile={true}
<<<<<<< HEAD:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.tsx.snap
=======
  type="default"
  variant="default"
>>>>>>> feat(Page): add page section main nav type variant:packages/patternfly-4/react-core/src/components/Page/__snapshots__/PageSection.test.js.snap
>
  <section
    className="pf-c-page__main-section pf-m-no-padding-mobile"
  />
</Component>
`;
